# what-is-my-personal-assistant-doing

./: .env.example  .gitignore  PLAN.md  README.md  check-pinned.yaml  e2e-load.yaml  package.json
apps/agent/: main.py
apps/agent/src/: prompts.py  runtime.py  trace_mcp.py  trace_state.py  trace_tools.py
apps/frontend/: next.config.ts
apps/frontend/src/app/: page.tsx
apps/frontend/src/components/traces/: A2UIChart.tsx  DraggableChart.tsx  Flamegraph.tsx  MetricsStrip.tsx  PinnedCharts.tsx  RunList.tsx  SpanDetail.tsx  Timeline.tsx
apps/frontend/src/lib/traces/: api.ts  format.ts  state.ts  types.ts
apps/mcp/: index.ts  package.json
apps/mcp/.mcp-use/: tool-registry.d.ts
apps/mcp/sql/: schema.sql
apps/mcp/src/: db.ts  events.ts  http.ts
apps/mcp/src/tools/: aggregate.ts  compare_runs.ts  get_run.ts  get_trace_tree.ts  index.ts  judge_trace.ts  list_runs.ts  query_spans.ts
apps/wimad/: README.md  pyproject.toml
apps/wimad/scripts/: smoke_test.py
apps/wimad/src/wimad/: __init__.py  context.py  decorators.py  exporter.py
apps/wimad/src/wimad/adapters/: __init__.py  hermes.py  hermes_entry.py
scripts/: check-env.sh
