[project]
name = "wimad"
version = "0.1.0"
description = "What-Is-My-Assistant-Doing — a tiny tracing SDK for Python agents. Decorators + span context manager + HTTP exporter, with a Hermes adapter for instrumenting NousResearch's hermes-agent from outside."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "requests>=2.32.0",
]

[project.scripts]
hermes-traced = "wimad.adapters.hermes_entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wimad"]
